# routes/index.js
@@ -1,15 +1,7 @@
-const express = require("express");
-const router = express.Router();
+const router = require("express").Router();
 const passport = require("passport");
 
-router.get("/", (req, res) => {
-  //#swagger.tags=['Hello World']
-  res.send("Hello World");
-});
-
-router.get("/login", (req, res, next) => {
-  passport.authenticate("github")(req, res, next);
-});
+router.get("/login", passport.authenticate("github"), (req, res) => {});
 
 router.get("/logout", function (req, res, next) {
   req.logout(function (err) {
@@ -19,6 +11,8 @@ router.get("/logout", function (req, res, next) {
     res.redirect("/");
   });
 });
+
+router.use("/", require("./swagger"));
 
 router.use("/users", require("./users"));
 router.use("/foods", require("./foods"));
